force-app/main/default/objects/Product2/fields/Avalara_Non_Taxable_Code__c.field-meta.xml
<CustomField>
    <fullName>Avalara_Non_Taxable_Code__c</fullName>
    <label>Avalara Non-Taxable Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>