force-app/main/default/objects/Product2/fields/Midwest_Group_Office__c.field-meta.xml
<CustomField>
    <fullName>Midwest_Group_Office__c</fullName>
    <label>Midwest Group Office</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midwest Machinery STL</fullName>
            </value>
            <value>
                <fullName>Midwest Machinery KC</fullName>
            </value>
            <value>
                <fullName>Midwest Machinery OK</fullName>
            </value>
            <value>
                <fullName>Engineered Products</fullName>
            </value>
            <value>
                <fullName>MaRRS</fullName>
            </value>
            <value>
                <fullName>Midwest Industrial Builders</fullName>
            </value>
            <value>
                <fullName>Spark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>