force-app/main/default/objects/Product2/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <inlineHelpText>Please do not paste rich text into this box. This will cause issues in a quote.</inlineHelpText>
    <label>Product Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>