force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Manufacturer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accessories (hose kits, etc)</fullName>
            </value>
            <value>
                <fullName>Actuators</fullName>
            </value>
            <value>
                <fullName>Adapters</fullName>
            </value>
            <value>
                <fullName>Air Eliminators</fullName>
            </value>
            <value>
                <fullName>Air Handler</fullName>
            </value>
            <value>
                <fullName>Air Vent</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>AtmosAir</fullName>
            </value>
            <value>
                <fullName>Bag Filter</fullName>
            </value>
            <value>
                <fullName>Balance Valve</fullName>
            </value>
            <value>
                <fullName>Bands</fullName>
            </value>
            <value>
                <fullName>Baseboard</fullName>
            </value>
            <value>
                <fullName>Bearings</fullName>
            </value>
            <value>
                <fullName>Belt Drive Units</fullName>
            </value>
            <value>
                <fullName>BiPolar Ionizer</fullName>
            </value>
            <value>
                <fullName>Blades</fullName>
            </value>
            <value>
                <fullName>Blower Coil Unit</fullName>
            </value>
            <value>
                <fullName>Boiler - Condensing</fullName>
            </value>
            <value>
                <fullName>Boiler - Condensing - Other</fullName>
            </value>
            <value>
                <fullName>Boiler - NON Condensing</fullName>
            </value>
            <value>
                <fullName>Brazed Plate Heat Exchanger</fullName>
            </value>
            <value>
                <fullName>Budgeting</fullName>
            </value>
            <value>
                <fullName>Buffer Tank</fullName>
            </value>
            <value>
                <fullName>Burners</fullName>
            </value>
            <value>
                <fullName>Bushings</fullName>
            </value>
            <value>
                <fullName>Cabinet Heater Unit</fullName>
            </value>
            <value>
                <fullName>Cabinet Unit Heaters</fullName>
            </value>
            <value>
                <fullName>Caps</fullName>
            </value>
            <value>
                <fullName>Centrifugal Separator</fullName>
            </value>
            <value>
                <fullName>Chassis Water Source Heat Pump</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>